started work on processing section of UI

--- a/todo.txt
+++ b/todo.txt
@@ -7,8 +7,9 @@
 6. allow an "input" to a pseudolayer to be another pseudolayer DONE
 7. comment code
 8. try kerneling DONE
-9. build argument formatters
+9. build argument formatters DONE
 10. implement FPS throttling DONE
 11. ensure that only the maps that are currently used for pseudolayers are rendered to save requests DONE
 12. work out how to pass arrays of textures
 13. environment variables -> including current map with control (due to z-index ordering)
+14. flexible processing options that are easy to add to
