--- a/todo.txt
+++ b/todo.txt
@@ -13,4 +13,4 @@
 12. work out how to pass arrays of textures
 13. environment variables -> including current map with control (due to z-index ordering)
 14. flexible guis that are easy to add to DONE-ish
-15. Add "create new layer" to GUIS
+15. Add "create new layer" and "reset layer" to GUIS
