fixed bug with state mutation in guis

--- a/todo.txt
+++ b/todo.txt
@@ -14,13 +14,14 @@
 13. environment variables -> including current map with control (due to z-index ordering)
 14. flexible guis that are easy to add to DONE
 15. Add "create new layer" and "reset layer" to GUIS DONE
-16. refactor -> differentiate between "layerObject", "guiLayer" and "pseudolayer". standardise punction for the above DONE
+16. refactor -> differentiate between "layerObject", "uiLayer" and "pseudolayer". standardise punction for the above DONE
 17. pass constructors to gui on instantiation DONE
 18. apply multiple effects to a pseudolayer without having to create a new layer DONE
 19. fix bug where same pseudolayer duplicated breaks selection system DONE
 20. panel that shows the updates to a layer when changed (to track changes) DONE
 21. look into 18 DONE
 22. add suggested kernels
-23. find an actual real world example of how aerial can be used
-24. test and bug fix gui state (back to 18 sigh)
-25. bug fix changing operator on filter RGB
+23. test and bug fix gui state (back to 18 sigh)
+24. bug fix changing operator on filter RGB. when shader is called, variable changes seem to be affecting the child layer
+    SHADER IS BEING APPLIED TWICE. issue is with object mutation - state object is mutating so any changes in state are stacking
+    and effect is being applied multiple times
