added in shader pass event

--- a/todo.txt
+++ b/todo.txt
@@ -28,5 +28,5 @@
 25. fix GPU memory leak DONE -> kind of, is getting garbage collected but probably not as often as it should. still runs into memory issues FIXED ->
     was textures attached to framebuffer not being deleted DONE
 26. refactor webgl.js
-27. handle for when the last render attempt is denied DONE
-28. work out what flickering is on render
+27. work out what flickering is on render -> due to openlayers animations. removing transitions when setting up the layer removes artifacts. DONE
+28. custom event for rendering when canvas is ready
