added basic sobel edge detection

--- a/todo.txt
+++ b/todo.txt
@@ -30,3 +30,4 @@
 26. refactor webgl.js
 27. work out what flickering is on render -> due to openlayers animations. removing transitions when setting up the layer removes artifacts. DONE
 28. custom event for rendering when canvas is ready
+29. still worried about minor memory leak, to review
