--- a/todo.txt
+++ b/todo.txt
@@ -38,4 +38,6 @@
 34. rewrite/ re-comment restoreGuiState function in ui DONE -> just removed it
 35. rework ui (AGAIN) DONE
 36. look into trying to optimize multiple tile layers as much as possible -> look into more effective caching, preloading outside viewport extent etc
+37. look into errors that occur when changing layers while tiles are rendering -> bug with events
+38. sometimes needs a kick to finish rendering after final tile has loaded in -> look into implementing this upon loading complete
 
